<resources>
    <string name="app_name">PottyMinder</string>
    <string name="do_alarm">Alarm on</string>
    <string name="do_mute">Mute</string>
    <string name="do_location">Background GPS</string>
    <string name="do_log">View Log</string>
    <string name="do_settings">Settings</string>
    <string name="do_about">About</string>
    <string name="do_quit">Quit</string>

    <string name="pref_interval_title">Interval</string>
    <string name="pref_interval_reg_title">Regular</string>
    <string name="pref_interval_reg_dialog_title">Minutes between reminders</string>
    <string name="pref_interval_reg_summary">Minutes between reminders</string>
    <string name="pref_interval_reg_default">45</string>
    <string name="pref_interval_skp_title">Skipped</string>
    <string name="pref_interval_skp_dialog_title">Minutes between reminders after a skip</string>
    <string name="pref_interval_skp_summary">Minutes between reminders after a skip</string>
    <string name="pref_interval_skp_default">10</string>
    <string name="pref_gps_title">GPS</string>
    <string name="pref_gps_sub_title">Background GPS</string>
    <string name="pref_gps_on_desc">Background GPS On</string>
    <string name="pref_gps_summary">Intermittently check GPS to manage alarms better</string>
    <string name="pref_gps_off_desc">Background GPS Off</string>
    <string name="pref_alarm_title">Reminder Settings</string>
    <string name="pref_alarm_vibe">Vibration</string>
    <string name="pref_vibe_on_desc">Vibrate is On</string>
    <string name="pref_vibe_summary">Toggle Vibration</string>
    <string name="pref_vibe_off_desc">Vibrate is Off</string>
    <string name="pref_alarm_ringtone_title">Ringtone</string>
    <string name="pref_alarm_LED">LED</string>
    <string name="pref_led_on_desc">LED is On</string>
    <string name="pref_led_summary">Toggle LED indicator</string>
    <string name="pref_led_off_desc">LED is Off</string>

    <string name="str_alarm_state">Potty Minder is Off</string>
    <string name="str_skip_state">Reminder has been skipped, using shorter reminder until a Potty Break has been recorded</string>
    <string name="str_next_alarm">Next alarm in 40:15</string>
    <string name="str_last_break">Time since last Potty Break 10:20</string>
    <string name="str_potty_button">Used Potty</string>
    <string name="str_placeholder">placeholder</string>
    <string name="str_potty_log_day">Day 1</string>

</resources>
