<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:title="@string/pref_interval_title">

        <ListPreference android:title="@string/pref_interval_reg_title"

            android:key="pref_interval_reg"
            android:dialogTitle="@string/pref_interval_reg_title"
            android:entries="@array/pref_interval_reg_entries"
            android:entryValues="@array/pref_interval_reg_entries"
            android:defaultValue="@string/pref_interval_reg_default" />
        />


        <ListPreference android:title="@string/pref_interval_skp_title"

            android:key="pref_interval_skp"
            android:dialogTitle="@string/pref_interval_skp_title"
            android:entries="@array/pref_interval_skp_entries"
            android:entryValues="@array/pref_interval_skp_entries"
            android:defaultValue="@string/pref_interval_skp_default" />
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_gps_title">

        <SwitchPreference
            android:title="@string/pref_gps_sub_title"
            android:switchTextOn="@string/pref_gps_on_desc"
            android:summary="@string/pref_gps_summary"
            android:switchTextOff="@string/pref_gps_off_desc"
            android:key="pref_gps"
            android:defaultValue="true"
            android:persistent="false">
        </SwitchPreference>
    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/pref_alarm_title">

        <SwitchPreference
            android:key="pref_vibe"
            android:title="@string/pref_alarm_vibe"
            android:switchTextOn="@string/pref_vibe_on_desc"
            android:summary="@string/pref_vibe_summary"
            android:switchTextOff="@string/pref_vibe_off_desc"
            android:defaultValue="true">

        </SwitchPreference>

        <RingtonePreference
            android:key="pref_ringtone"
            android:title="@string/pref_alarm_ringtone_title"
            android:ringtoneType="alarm">

        </RingtonePreference>

        <SwitchPreference
            android:key="pref_led"
            android:title="@string/pref_alarm_LED"
            android:switchTextOn="@string/pref_led_on_desc"
            android:summary="@string/pref_led_summary"
            android:switchTextOff="@string/pref_led_off_desc"
            android:defaultValue="false">

        </SwitchPreference>

    </PreferenceCategory>
</PreferenceScreen>
